# tickGame

./: .ghc.environment.x86_64-linux-8.4.4  .ghc.environment.x86_64-linux-8.6.3  ChangeLog.md  LICENSE  README.md  cabal.sandbox.config  shell.nix  specificcabal.nix  specificvscode.nix  test-foo.hs  tickGame.cabal
.cabal-sandbox/: add-source-timestamps
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.4.4/: package.cache  tickGame-0.1.0.0-inplace-tickGameLib.conf  tickGame-0.1.0.0-inplace.conf
lib/: BusinessLogic.hs  Config.hs  Elements.hs  Initial.hs  Iso.hs  LensUtils.hs  Lenses.hs  Lib.hs  Mod.hs  NaturalTransformation.hs  Path.hs  PathedBusinessLogic.hs  Resources.hs  Seconds.hs  Source.hs  State.hs  StateStep.hs  Tradeoff.hs  Utils.hs  View.hs
src/: Main.hs
tests/: BuyHelper.hs  GenerateEnergy.hs  Polytest.hs  test.hs
