cabal-version: >=1.10
name: tickGame
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: sehnpaa@gmail.com
author: Peter Andersson
build-type: Simple
extra-source-files:
    ChangeLog.md

library tickGameLib
    hs-source-dirs: lib
    default-language: Haskell2010
    exposed-modules: Lib, View
    other-modules:
      BusinessLogic
      Config
      Elements
      Initial
      Iso
      LensUtils
      Mod
      NaturalTransformation
      PathedBusinessLogic
      Resources
      Utils
    build-depends:
        base >=4.11 && <5
      , gi-gtk
      , gi-gtk-declarative
      , gi-gtk-declarative-app-simple
      , lens
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , tuple
    ghc-options: -Wall

executable tickGame
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <5
      , gi-gtk
      , gi-gtk-declarative
      , gi-gtk-declarative-app-simple
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , tickGameLib
      , vector
    ghc-options: -threaded -Wall

test-suite test-foo
    main-is: test.hs
    hs-source-dirs: tests
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <5
      , lens
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , tickGameLib
