cabal-version: >=1.10
name: tickGame
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: sehnpaa@gmail.com
author: Peter Andersson
build-type: Simple
extra-source-files:
    ChangeLog.md

library tickGameLib
    hs-source-dirs: lib
    default-language: Haskell2010
    exposed-modules:
      BusinessLogic
      Elements
      Lib
      Seconds
      View
    other-modules:
      -- BusinessLogic
      Config
      -- Elements
      Initial
      LensUtils
      NaturalTransformation
      Resources
      -- Seconds
      Source
      State
      Tradeoff
      Utils
    build-depends:
        base >=4.11 && <5 , ListZipper
      , gi-gtk
      , gi-gtk-declarative
      , gi-gtk-declarative-app-simple
      , lens
      , megaparsec
      , mtl
      , pretty-simple
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , validation
    ghc-options: -Wall

executable tickGame
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <5
      , async
      , bytestring
      , gi-gdk
      , gi-gtk
      , gi-gtk-declarative
      , gi-gtk-declarative-app-simple
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , tickGameLib
      , vector
    ghc-options: -threaded -Wall

test-suite test-foo
    main-is: test.hs
    hs-source-dirs: tests
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    other-modules:
      BuyHelper
      GenerateEnergy
    build-depends:
        base >=4.11 && <5
      , ListZipper
      , lens
      , mtl
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , tickGameLib
